--- a/css/style.scss
+++ b/css/style.scss
@@ -113,6 +113,15 @@ header {
         text-transform: capitalize;
         color: #fff;
         margin-bottom: 10px;
+        &:before{
+          background-image: url("images/img_before.svg");
+          content: "";
+          display: inline-flex;
+          width: 35px;
+          height: 2px;
+          margin-right: 14px;
+
+        }
       }
 
       h1 {
@@ -153,11 +162,21 @@ header {
         text-decoration: none;
         color: #fff;
         border-bottom: solid 1px #fff;
+        &:hover{
+          border: 2px solid #ffca42;
+          background: #ffca42;
+          padding: 19px 52px;
+          gap: 51px;
+        }
       }
 
       .order {
         margin-right: 103px;
         margin-left: 52px;
+        &:hover{
+          margin-left: 0;
+          margin-right: 51px;
+        }
       }
 
       .number {
@@ -197,6 +216,7 @@ header {
 
 .author’s_book {
   text-align: center;
+  padding-bottom: 150px;
 
   .container {
     display: block;
@@ -308,20 +328,24 @@ header {
   }
 
 }
-.author{
+
+.author {
   background: #f5f8fc;
   padding-top: 180px;
   padding-bottom: 140px;
-  .container{
+
+  .container {
     display: flex;
     justify-content: space-between;
-    .author_photo{
+
+    .author_photo {
       margin-right: 150px;
       max-width: 575px;
       height: 670px;
     }
-    .description{
-      h2{
+
+    .description {
+      h2 {
         font-family: var(--second-family);
         font-weight: 400;
         font-size: 42px;
@@ -331,7 +355,8 @@ header {
         margin-top: 56px;
         margin-bottom: 59px;
       }
-      .about_author{
+
+      .about_author {
         font-family: var(--font-family);
         font-weight: 400;
         font-size: 19px;
@@ -340,11 +365,13 @@ header {
         margin-bottom: 34px;
         max-width: 559px;
       }
-      .rating{
+
+      .rating {
         display: flex;
         justify-content: space-between;
         gap: 26px;
-        p{
+
+        p {
           font-family: var(--second-family);
           font-weight: 400;
           font-size: 54px;
@@ -353,7 +380,8 @@ header {
           width: 181px;
           height: 98px;
           margin-bottom: 55px;
-          span{
+
+          span {
             font-family: var(--font-family);
             font-weight: 400;
             font-size: 17px;
@@ -362,23 +390,27 @@ header {
           }
         }
       }
-      .qa_cod{
+
+      .qa_cod {
         max-width: 484px;
         height: 161px;
         background: #1b3764;
         display: flex;
         gap: 40px;
-        img{
+
+        img {
           margin-top: 15px;
           margin-left: 20px;
           width: 130px;
           height: 130px;
         }
-        .details{
+
+        .details {
           display: block;
           align-items: center;
         }
-        .name{
+
+        .name {
           margin-top: 37px;
           font-family: var(--second-family);
           font-weight: 400;
@@ -392,15 +424,18 @@ header {
     }
   }
 }
-.partnership{
+
+.partnership {
   padding-top: 126px;
   padding-bottom: 130px;
-  .container{
+
+  .container {
     display: block;
     align-items: center;
     justify-content: center;
   }
-  h2{
+
+  h2 {
     font-family: var(--second-family);
     font-weight: 400;
     font-size: 42px;
@@ -410,24 +445,28 @@ header {
     color: #1b3764;
     margin-bottom: 77px;
   }
-  .companies{
+
+  .companies {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 16px;
   }
-  article{
+
+  article {
     max-width: 313px;
     display: block;
     align-items: center;
     justify-content: center;
     text-align: center;
-    img{
+
+    img {
       width: 189px;
       height: 100px;
       margin-bottom: 22px;
     }
-    h3{
+
+    h3 {
       font-family: var(--second-family);
       font-weight: 400;
       font-size: 24px;
@@ -436,7 +475,8 @@ header {
       color: #1b3764;
       margin-bottom: 16px;
     }
-    p{
+
+    p {
       font-family: var(--font-family);
       font-weight: 400;
       font-size: 19px;
@@ -446,21 +486,25 @@ header {
     }
   }
 }
-.book_copy{
+
+.book_copy {
   padding-top: 70px;
   padding-bottom: 70px;
   background: #1b3764;
-  .container{
+
+  .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 201px;
-    }
-  .book_copy_text{
+  }
+
+  .book_copy_text {
     padding-top: 75px;
     display: block;
     justify-content: start;
-    h2{
+
+    h2 {
       font-family: var(--second-family);
       font-weight: 400;
       font-size: 45px;
@@ -469,7 +513,8 @@ header {
       color: #fff;
       margin-bottom: 54px;
     }
-    p{
+
+    p {
       font-family: var(--font-family);
       font-weight: 400;
       font-size: 19px;
@@ -477,7 +522,8 @@ header {
       color: #b4c7e7;
       margin-bottom: 27px;
     }
-    a{
+
+    a {
       font-family: var(--second-family);
       font-weight: 400;
       font-size: 19px;
@@ -490,14 +536,17 @@ header {
     }
   }
 }
-.what_learn{
+
+.what_learn {
   padding-top: 136px;
   padding-bottom: 140px;
-  .container{
+
+  .container {
     display: block;
     text-align: center;
     align-items: center;
-    h2{
+
+    h2 {
       font-family: var(--second-family);
       font-weight: 400;
       font-size: 42px;
@@ -507,16 +556,19 @@ header {
       color: #1b3764;
       padding-bottom: 137px;
     }
-    .what_learn_description{
+
+    .what_learn_description {
       display: flex;
       justify-content: space-between;
       gap: 60px;
-      .list{
+
+      .list {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
         gap: 30px;
-        article{
+
+        article {
           max-width: 303px;
           height: 272px;
           background: #f4f8ff;
@@ -524,7 +576,8 @@ header {
           align-items: center;
           text-align: start;
           margin-top: 30px;
-          h5{
+
+          h5 {
             font-family: var(--second-family);
             font-weight: 400;
             font-size: 23px;
@@ -537,15 +590,18 @@ header {
             padding-left: 43px;
             padding-top: 38px;
           }
-          p{
+
+          p {
             font-family: var(--second-family);
             font-weight: 400;
             font-size: 24px;
             line-height: 140%;
             color: #1b3764;
+            padding: 30px;
           }
         }
-        img{
+
+        img {
           max-width: 575px;
           height: 672px;
         }
@@ -553,16 +609,19 @@ header {
     }
   }
 }
-.enhance_vision{
+
+.enhance_vision {
   background: #f4f8ff;
   padding-top: 116px;
   padding-bottom: 130px;
-  .container{
+
+  .container {
     display: block;
     align-items: center;
     justify-content: center;
     text-align: center;
-    h2{
+
+    h2 {
       font-family: var(--second-family);
       font-weight: 400;
       font-size: 42px;
@@ -572,117 +631,395 @@ header {
       color: #1b3764;
       padding-bottom: 96px;
     }
-}
-.enhance_vision_list{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 30px 40px;
-  article{
-    max-width: 635px;
-    height: 242px;
-    background: #fff;
-    display: block;
-    text-align: left;
-    margin-bottom: 60px;
-    h6{
-      font-family: var(--second-family);
-      font-weight: 400;
-      font-size: 24px;
-      line-height: 120%;
-      color: #1b3764;
-      padding-top: 42px;
-      padding-bottom: 21px;
-    }
-    p{
-      font-family: var(--font-family);
-      font-weight: 400;
-      font-size: 19px;
-      line-height: 170%;
-      color: #969aa0;
-    }
-    div{
-      display: flex;
-      gap: 45px;
-      p{
+  }
+
+  .enhance_vision_list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px 40px;
+
+    article {
+      max-width: 635px;
+      height: 242px;
+      background: #fff;
+      display: block;
+      text-align: left;
+      margin-bottom: 60px;
+
+      h6 {
         font-family: var(--second-family);
         font-weight: 400;
-        font-size: 22px;
-        line-height: 140%;
+        font-size: 24px;
+        line-height: 120%;
         color: #1b3764;
-        padding-left: 10px;
-        span{
-          font-family: var(--font-family);
+        padding-top: 42px;
+        padding-bottom: 21px;
+      }
+
+      p {
+        font-family: var(--font-family);
+        font-weight: 400;
+        font-size: 19px;
+        line-height: 170%;
+        color: #969aa0;
+      }
+
+      div {
+        display: flex;
+        gap: 45px;
+
+        p {
+          font-family: var(--second-family);
           font-weight: 400;
-          font-size: 17px;
-          line-height: 159%;
-          color: #969aa0;
+          font-size: 22px;
+          line-height: 140%;
+          color: #1b3764;
+          padding-left: 10px;
+
+          span {
+            font-family: var(--font-family);
+            font-weight: 400;
+            font-size: 17px;
+            line-height: 159%;
+            color: #969aa0;
+          }
         }
       }
     }
   }
-}
-.questions{
-  display: block;
-  text-align: center;
-  align-items: center;
-  .start{
-    font-family: var(--second-family);
-    font-weight: 400;
-    font-size: 19px;
-    line-height: 150%;
-    letter-spacing: 0.03em;
-    text-transform: capitalize;
+
+  .questions {
+    display: block;
     text-align: center;
-    color: #1b3764;
-    text-decoration: none;
-    padding: 24px 92px;
-    border: 2px solid #ffca42;
-    background: #ffca42;
-    margin-bottom: 34px;
-  }
-  .short_description{
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 158%;
-    text-align: center;
-    color: #969aa0;
-    text-decoration: none;
-  }
-  p{
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 158%;
-    letter-spacing: 0.01em;
-    text-align: center;
-    color: #1b3764;
-    a{
-      font-family: var(--font-family);
+    align-items: center;
+
+    .start {
+      font-family: var(--second-family);
       font-weight: 400;
       font-size: 19px;
       line-height: 150%;
+      letter-spacing: 0.03em;
+      text-transform: capitalize;
+      text-align: center;
+      color: #1b3764;
+      text-decoration: none;
+      padding: 24px 92px;
+      border: 2px solid #ffca42;
+      background: #ffca42;
+      margin-bottom: 34px;
+    }
+
+    .short_description {
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 158%;
       text-align: center;
       color: #969aa0;
       text-decoration: none;
     }
+
+    p {
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 158%;
+      letter-spacing: 0.01em;
+      text-align: center;
+      color: #1b3764;
+
+      a {
+        font-family: var(--font-family);
+        font-weight: 400;
+        font-size: 19px;
+        line-height: 150%;
+        text-align: center;
+        color: #969aa0;
+        text-decoration: none;
+      }
+    }
+
   }
 
 }
 
+.reviews {
+  padding-top: 130px;
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+  }
 }
 
-/*
+.reviews_readers {
+  display: block;
+  align-items: center;
+  justify-content: left;
+  max-width: 468px;
+  padding-top: 104px;
+
+  h3 {
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 42px;
+    line-height: 120%;
+    text-transform: capitalize;
+    color: #1b3764;
+    margin-bottom: 59px;
+  }
+
+  .all_reviews {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 180%;
+    color: #969aa0;
+    margin-bottom: 14px;
+  }
+
+  .grade {
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 120%;
+    color: #1b3764;
+    margin-bottom: 12px;
+  }
+
+  .overall_ratings {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 158%;
+    color: #1b3764;
+  }
+}
+
+.readers {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+
+  article {
+    max-width: 381px;
+    height: 292px;
+    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.11);
+    background: #1b3764;
+    display: block;
+    padding-left: 35px;
+    padding-right: 35px;
+
+    div {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 20px;
+      padding-top: 30px;
+
+      img {
+        border-radius: 100px;
+        width: 85px;
+        height: 85px;
+      }
+
+      p {
+        font-family: var(--second-family);
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 120%;
+        color: #fff;
+      }
+    }
+
+    h6 {
+      font-family: var(--second-family);
+      font-weight: 400;
+      font-size: 22px;
+      line-height: 150%;
+      color: #fff;
+      margin-bottom: 13px;
+    }
+
+    p {
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 160%;
+      color: #b4c7e7;
+    }
+  }
+}
+
+.articles_resources {
+  padding-top: 130px;
+  background: #f4f8ff;
+  padding-bottom: 150px;
+
+  .container {
+    display: block;
+    text-align: center;
+
+    h2 {
+      font-family: var(--second-family);
+      font-weight: 400;
+      font-size: 42px;
+      line-height: 120%;
+      text-transform: capitalize;
+      text-align: center;
+      color: #1b3764;
+      margin-bottom: 96px;
+    }
+  }
+}
+
+.articles {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+
+  article {
+    max-width: 420px;
+    display: block;
+    text-align: left;
+    background: #fff;
+
+    img {
+      border-radius: 5px 5px 0 0;
+      width: 420px;
+      height: 350px;
+    }
+
+    h5 {
+      font-family: var(--second-family);
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 140%;
+      letter-spacing: 0.01em;
+      color: #1b3764;
+      padding: 25px 30px 19px 30px;
+    }
+
+    p {
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 19px;
+      line-height: 160%;
+      color: #969aa0;
+      padding: 0 30px 13px 30px;
+    }
+  }
+}
+
+.date {
+  display: flex;
+  justify-content: space-between;
+  gap: 138px;
+  align-items: center;
+  padding-bottom: 30px;
+
+  a {
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 120%;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #1b3764;
+    text-decoration: none;
+    border-bottom: solid 2px #1b3764;
+  }
+
+  p {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 159%;
+    color: #1b3764;
+  }
+}
+
+.subscribe {
+  padding-top: 120px;
+  padding-bottom: 120px;
+
+  .container {
+    box-shadow: 0 0 19px 0 rgba(0, 0, 0, 0.18);
+    background: #ffca42;
+    border-radius: 5px;
+    padding-top: 100px;
+    display: block;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 115px;
+
+    h3 {
+      font-family: var(--second-family);
+      font-weight: 400;
+      font-size: 42px;
+      line-height: 120%;
+      text-transform: capitalize;
+      text-align: center;
+      color: #1b3764;
+      padding-bottom: 51px;
+    }
+
+    p {
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 158%;
+      text-align: center;
+      color: #1b3764;
+      padding-bottom: 49px;
+    }
+
+    input {
+      border: 1px solid #dce1e9;
+      width: 656px;
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 170%;
+      letter-spacing: 0.01em;
+      color: #b4c7e7;
+      padding: 20px 39px;
+      margin-left: 16px;
+    }
+
+    button {
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 170%;
+      letter-spacing: 0.01em;
+      text-align: center;
+      color: #fff;
+      padding: 19px 120px;
+      border: 2px solid #1b3764;
+      width: 328px;
+      background: #1b3764;
+    }
+  }
+}
+
 footer {
   padding-top: 92px;
   padding-bottom: 25px;
   background-color: #1B3764;
+  text-align: center;
 
   .footer_all {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 90px;
+    padding-bottom: 95px;
   }
 
   .logo_soc_network {
@@ -710,10 +1047,17 @@ footer {
   }
 
   .explore {
-    max-width: 169px;
-
+    display: block;
+    text-align: left;
+    align-items: center;
     h2 {
       margin-bottom: 24px;
+      font-family: var(--second-family);
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 140%;
+      letter-spacing: 0.02em;
+      color: #fff;
     }
 
     ul {
@@ -721,9 +1065,93 @@ footer {
       align-items: center;
       justify-content: left;
       gap: 9px;
+
+      li {
+        font-family: var(--font-family);
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 170%;
+        letter-spacing: 0.01em;
+        color: #b4c7e7;
+      }
+    }
+  }
+
+  .utility_pages {
+    display: block;
+    text-align: left;
+    align-items: center;
+    h2 {
+      margin-bottom: 24px;
+      font-family: var(--second-family);
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 140%;
+      letter-spacing: 0.02em;
+      color: #fff;
     }
 
+    ul {
+      display: inline-block;
+      align-items: center;
+      justify-content: left;
+      gap: 9px;
+
+      li {
+        font-family: var(--font-family);
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 170%;
+        letter-spacing: 0.01em;
+        color: #b4c7e7;
+      }
+    }
+  }
+  .keep_in_touch{
+    display: block;
+    text-align: left;
+    align-items: center;
+    h2{
+      margin-bottom: 27px;
+      font-family: var(--second-family);
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 140%;
+      letter-spacing: 0.02em;
+      color: #fff;
+    }
+    p{
+      font-family: var(--second-family);
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 150%;
+      letter-spacing: 0.02em;
+      color: #fff;
+      span{
+        font-family: var(--font-family);
+        font-weight: 400;
+        font-size: 17px;
+        line-height: 159%;
+        color: #b4c7e7;
+      }
+    }
+  }
+  p{
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 150%;
+    letter-spacing: 0.01em;
+    text-align: center;
+    color: #b4c7e7;
+    span{
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 17px;
+      line-height: 150%;
+      letter-spacing: 0.01em;
+      text-align: center;
+      color: #fff;
+    }
   }
 }
-
- */
