--- a/css/style.scss
+++ b/css/style.scss
@@ -75,6 +75,7 @@ header {
     }
 
     .button_order {
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 19px;
       line-height: 150%;
@@ -96,6 +97,7 @@ header {
   .container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     .books {
       max-width: 589px;
@@ -104,8 +106,7 @@ header {
       display: block;
 
       .welcome {
-        margin-top: 147px;
-        font-family: var(--second-family);
+        font-family: "Cardo", serif;
         font-weight: 400;
         font-size: 21px;
         line-height: 171%;
@@ -113,19 +114,20 @@ header {
         text-transform: capitalize;
         color: #fff;
         margin-bottom: 10px;
-        &:before{
-          background-image: url("images/img_before.svg");
+        display: flex;
+        align-items: center;
+
+        &:before {
+          background-color: #ffca42;
           content: "";
-          display: inline-flex;
           width: 35px;
           height: 2px;
           margin-right: 14px;
-
         }
       }
 
       h1 {
-        font-family: var(--second-family);
+        font-family: "Cardo", serif;
         font-weight: 400;
         font-size: 64px;
         line-height: 122%;
@@ -133,7 +135,7 @@ header {
         color: #fff;
 
         span {
-          font-family: var(--second-family);
+          font-family: "Cardo", serif;
           font-weight: 400;
           font-size: 63px;
           line-height: 124%;
@@ -144,7 +146,7 @@ header {
       }
 
       .description {
-        font-family: var(--font-family);
+        font-family: "Inter", sans-serif;
         font-weight: 400;
         font-size: 18px;
         line-height: 158%;
@@ -153,7 +155,7 @@ header {
       }
 
       a {
-        font-family: var(--second-family);
+        font-family: "Cardo", serif;
         font-weight: 400;
         font-size: 19px;
         line-height: 160%;
@@ -162,7 +164,8 @@ header {
         text-decoration: none;
         color: #fff;
         border-bottom: solid 1px #fff;
-        &:hover{
+
+        &:hover {
           border: 2px solid #ffca42;
           background: #ffca42;
           padding: 19px 52px;
@@ -173,7 +176,8 @@ header {
       .order {
         margin-right: 103px;
         margin-left: 52px;
-        &:hover{
+
+        &:hover {
           margin-left: 0;
           margin-right: 51px;
         }
@@ -185,21 +189,23 @@ header {
         gap: 60px;
 
         p {
-          font-family: var(--second-family);
+          font-family: "Cardo", serif;
           font-weight: 400;
           font-size: 24px;
           line-height: 120%;
           letter-spacing: 0.02em;
           color: #fff;
+          display: inline-flex;
 
           &::before {
             border-radius: 100px;
-            width: 16px;
+            width: 28px;
             height: 16px;
             background: #ffca42;
             content: "";
-            display: inline-flex;
+            display: block;
             margin-right: 10px;
+            margin-top: 5px;
           }
         }
       }
@@ -222,7 +228,7 @@ header {
     display: block;
 
     .h2 {
-      font-family: var(--second-family);
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 42px;
       line-height: 120%;
@@ -260,7 +266,7 @@ header {
 
         .books_text {
           h3 {
-            font-family: var(--second-family);
+            font-family: "Cardo", serif;
             font-weight: 400;
             font-size: 32px;
             line-height: 120%;
@@ -271,7 +277,7 @@ header {
           }
 
           .prise {
-            font-family: var(--font-family);
+            font-family: "Inter", sans-serif;
             font-weight: 400;
             font-size: 21px;
             line-height: 157%;
@@ -280,7 +286,7 @@ header {
           }
 
           .about_books {
-            font-family: var(--font-family);
+            font-family: "Inter", sans-serif;
             font-weight: 400;
             font-size: 19px;
             line-height: 150%;
@@ -289,7 +295,7 @@ header {
           }
 
           .printed_book {
-            font-family: var(--second-family);
+            font-family: "Cardo", serif;
             font-weight: 400;
             font-size: 24px;
             line-height: 120%;
@@ -308,7 +314,7 @@ header {
           }
 
           a {
-            font-family: var(--second-family);
+            font-family: "Cardo", serif;
             font-weight: 400;
             font-size: 19px;
             line-height: 150%;
@@ -346,7 +352,7 @@ header {
 
     .description {
       h2 {
-        font-family: var(--second-family);
+        font-family: "Cardo", serif;
         font-weight: 400;
         font-size: 42px;
         line-height: 120%;
@@ -357,7 +363,7 @@ header {
       }
 
       .about_author {
-        font-family: var(--font-family);
+        font-family: "Inter", sans-serif;
         font-weight: 400;
         font-size: 19px;
         line-height: 180%;
@@ -372,7 +378,7 @@ header {
         gap: 26px;
 
         p {
-          font-family: var(--second-family);
+          font-family: "Cardo", serif;
           font-weight: 400;
           font-size: 54px;
           line-height: 143%;
@@ -382,7 +388,7 @@ header {
           margin-bottom: 55px;
 
           span {
-            font-family: var(--font-family);
+            font-family: "Inter", sans-serif;
             font-weight: 400;
             font-size: 17px;
             line-height: 127%;
@@ -397,9 +403,9 @@ header {
         background: #1b3764;
         display: flex;
         gap: 40px;
+        align-items: center;
 
         img {
-          margin-top: 15px;
           margin-left: 20px;
           width: 130px;
           height: 130px;
@@ -408,16 +414,26 @@ header {
         .details {
           display: block;
           align-items: center;
-        }
 
-        .name {
-          margin-top: 37px;
-          font-family: var(--second-family);
-          font-weight: 400;
-          font-size: 22px;
-          line-height: 120%;
-          color: #ffca42;
-          margin-bottom: 10px;
+          a {
+            display: block;
+            font-family: "Inter", sans-serif;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 158%;
+            color: #b4c7e7;
+            text-decoration: none;
+
+          }
+
+          .name {
+            font-family: "Cardo", serif;
+            font-weight: 400;
+            font-size: 22px;
+            line-height: 120%;
+            color: #ffca42;
+            margin-bottom: 10px;
+          }
         }
       }
 
@@ -436,7 +452,7 @@ header {
   }
 
   h2 {
-    font-family: var(--second-family);
+    font-family: "Cardo", serif;
     font-weight: 400;
     font-size: 42px;
     line-height: 120%;
@@ -467,7 +483,7 @@ header {
     }
 
     h3 {
-      font-family: var(--second-family);
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 24px;
       line-height: 120%;
@@ -477,7 +493,7 @@ header {
     }
 
     p {
-      font-family: var(--font-family);
+      font-family: "Inter", sans-serif;
       font-weight: 400;
       font-size: 19px;
       line-height: 150%;
@@ -505,7 +521,7 @@ header {
     justify-content: start;
 
     h2 {
-      font-family: var(--second-family);
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 45px;
       line-height: 120%;
@@ -515,16 +531,16 @@ header {
     }
 
     p {
-      font-family: var(--font-family);
+      font-family: "Inter", sans-serif;
       font-weight: 400;
       font-size: 19px;
       line-height: 150%;
       color: #b4c7e7;
-      margin-bottom: 27px;
+      padding-bottom: 47px;
     }
 
     a {
-      font-family: var(--second-family);
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 19px;
       line-height: 150%;
@@ -547,7 +563,7 @@ header {
     align-items: center;
 
     h2 {
-      font-family: var(--second-family);
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 42px;
       line-height: 120%;
@@ -578,7 +594,7 @@ header {
           margin-top: 30px;
 
           h5 {
-            font-family: var(--second-family);
+            font-family: "Cardo", serif;
             font-weight: 400;
             font-size: 23px;
             line-height: 125%;
@@ -587,12 +603,15 @@ header {
             width: 50px;
             height: 50px;
             background: #ffca42;
-            padding-left: 43px;
-            padding-top: 38px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 30px;
+            margin-left: 30px;
           }
 
           p {
-            font-family: var(--second-family);
+            font-family: "Cardo", serif;
             font-weight: 400;
             font-size: 24px;
             line-height: 140%;
@@ -609,7 +628,7 @@ header {
     }
   }
 }
-
+/*
 .enhance_vision {
   background: #f4f8ff;
   padding-top: 116px;
@@ -743,13 +762,14 @@ header {
   }
 
 }
-
+*/
 .reviews {
   padding-top: 130px;
-
+  padding-bottom: 150px;
   .container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 30px;
   }
 }
@@ -758,11 +778,11 @@ header {
   display: block;
   align-items: center;
   justify-content: left;
-  max-width: 468px;
-  padding-top: 104px;
+  max-width: 448px;
+  padding-left: 60px;
 
   h3 {
-    font-family: var(--second-family);
+    font-family: "Cardo", serif;
     font-weight: 400;
     font-size: 42px;
     line-height: 120%;
@@ -772,7 +792,7 @@ header {
   }
 
   .all_reviews {
-    font-family: var(--font-family);
+    font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 19px;
     line-height: 180%;
@@ -781,7 +801,7 @@ header {
   }
 
   .grade {
-    font-family: var(--second-family);
+    font-family: "Cardo", serif;
     font-weight: 400;
     font-size: 22px;
     line-height: 120%;
@@ -790,7 +810,7 @@ header {
   }
 
   .overall_ratings {
-    font-family: var(--font-family);
+    font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 158%;
@@ -800,11 +820,10 @@ header {
 
 .readers {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   gap: 20px;
-
+  max-width: 381px;
   article {
     max-width: 381px;
     height: 292px;
@@ -828,7 +847,7 @@ header {
       }
 
       p {
-        font-family: var(--second-family);
+        font-family: "Cardo", serif;
         font-weight: 400;
         font-size: 24px;
         line-height: 120%;
@@ -837,7 +856,7 @@ header {
     }
 
     h6 {
-      font-family: var(--second-family);
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 22px;
       line-height: 150%;
@@ -846,7 +865,59 @@ header {
     }
 
     p {
-      font-family: var(--font-family);
+      font-family: "Inter", sans-serif;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 160%;
+      color: #b4c7e7;
+    }
+  }
+}
+.one_review{
+  display: flex;
+  max-width: 381px;
+  article {
+    max-width: 381px;
+    height: 292px;
+    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.11);
+    background: #1b3764;
+    display: block;
+    padding-left: 35px;
+    padding-right: 35px;
+
+    div {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 20px;
+      padding-top: 30px;
+
+      img {
+        border-radius: 100px;
+        width: 85px;
+        height: 85px;
+      }
+
+      p {
+        font-family: "Cardo", serif;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 120%;
+        color: #fff;
+      }
+    }
+
+    h6 {
+      font-family: "Cardo", serif;
+      font-weight: 400;
+      font-size: 22px;
+      line-height: 150%;
+      color: #fff;
+      margin-bottom: 13px;
+    }
+
+    p {
+      font-family: "Inter", sans-serif;
       font-weight: 400;
       font-size: 18px;
       line-height: 160%;
@@ -865,7 +936,7 @@ header {
     text-align: center;
 
     h2 {
-      font-family: var(--second-family);
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 42px;
       line-height: 120%;
@@ -895,7 +966,7 @@ header {
     }
 
     h5 {
-      font-family: var(--second-family);
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 24px;
       line-height: 140%;
@@ -904,13 +975,14 @@ header {
       padding: 25px 30px 19px 30px;
     }
 
-    p {
-      font-family: var(--font-family);
+    .articles_p {
+      font-family: "Inter", sans-serif;
       font-weight: 400;
       font-size: 19px;
       line-height: 160%;
       color: #969aa0;
       padding: 0 30px 13px 30px;
+      height: 100px;
     }
   }
 }
@@ -918,12 +990,11 @@ header {
 .date {
   display: flex;
   justify-content: space-between;
-  gap: 138px;
+  
   align-items: center;
-  padding-bottom: 30px;
-
+  padding: 0 30px 30px 30px ;
   a {
-    font-family: var(--second-family);
+    font-family: "Cardo", serif;
     font-weight: 400;
     font-size: 19px;
     line-height: 120%;
@@ -935,7 +1006,7 @@ header {
   }
 
   p {
-    font-family: var(--font-family);
+    font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 159%;
@@ -959,7 +1030,7 @@ header {
     padding-bottom: 115px;
 
     h3 {
-      font-family: var(--second-family);
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 42px;
       line-height: 120%;
@@ -970,7 +1041,7 @@ header {
     }
 
     p {
-      font-family: var(--font-family);
+      font-family: "Inter", sans-serif;
       font-weight: 400;
       font-size: 18px;
       line-height: 158%;
@@ -982,7 +1053,7 @@ header {
     input {
       border: 1px solid #dce1e9;
       width: 656px;
-      font-family: var(--font-family);
+      font-family: "Inter", sans-serif;
       font-weight: 400;
       font-size: 18px;
       line-height: 170%;
@@ -993,7 +1064,7 @@ header {
     }
 
     button {
-      font-family: var(--font-family);
+      font-family: "Inter", sans-serif;
       font-weight: 400;
       font-size: 18px;
       line-height: 170%;
@@ -1025,7 +1096,7 @@ footer {
   .logo_soc_network {
     max-width: 250px;
 
-    img {
+    .logo_footer {
       margin-bottom: 20px;
     }
 
@@ -1050,9 +1121,10 @@ footer {
     display: block;
     text-align: left;
     align-items: center;
+
     h2 {
       margin-bottom: 24px;
-      font-family: var(--second-family);
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 24px;
       line-height: 140%;
@@ -1067,7 +1139,7 @@ footer {
       gap: 9px;
 
       li {
-        font-family: var(--font-family);
+        font-family: "Inter", sans-serif;
         font-weight: 400;
         font-size: 18px;
         line-height: 170%;
@@ -1081,9 +1153,10 @@ footer {
     display: block;
     text-align: left;
     align-items: center;
+
     h2 {
       margin-bottom: 24px;
-      font-family: var(--second-family);
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 24px;
       line-height: 140%;
@@ -1098,7 +1171,7 @@ footer {
       gap: 9px;
 
       li {
-        font-family: var(--font-family);
+        font-family: "Inter", sans-serif;
         font-weight: 400;
         font-size: 18px;
         line-height: 170%;
@@ -1107,28 +1180,32 @@ footer {
       }
     }
   }
-  .keep_in_touch{
+
+  .keep_in_touch {
     display: block;
     text-align: left;
     align-items: center;
-    h2{
+
+    h2 {
       margin-bottom: 27px;
-      font-family: var(--second-family);
+      font-family: "Inter", sans-serif;
       font-weight: 400;
       font-size: 24px;
       line-height: 140%;
       letter-spacing: 0.02em;
       color: #fff;
     }
-    p{
-      font-family: var(--second-family);
+
+    p {
+      font-family: "Cardo", serif;
       font-weight: 400;
       font-size: 18px;
       line-height: 150%;
       letter-spacing: 0.02em;
       color: #fff;
-      span{
-        font-family: var(--font-family);
+
+      span {
+        font-family: "Inter", sans-serif;
         font-weight: 400;
         font-size: 17px;
         line-height: 159%;
@@ -1136,16 +1213,18 @@ footer {
       }
     }
   }
-  p{
-    font-family: var(--font-family);
+
+  p {
+    font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 17px;
     line-height: 150%;
     letter-spacing: 0.01em;
     text-align: center;
     color: #b4c7e7;
-    span{
-      font-family: var(--font-family);
+
+    span {
+      font-family: "Inter", sans-serif;
       font-weight: 400;
       font-size: 17px;
       line-height: 150%;
