--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ header .container .button_order {
 .author’s_book .container {
   display: block;
 }
-.author’s_book .container .h2 {
+.author’s_book .container .author’s_book_title {
   font-family: "Cardo", serif;
   font-weight: 400;
   font-size: 42px;
@@ -210,14 +210,6 @@ header .container .button_order {
   text-transform: capitalize;
   text-align: center;
   color: #1b3764;
-  /* &::after{
-     display: block;
-     border: solid 3px #ffca42 ;
-     width: 50px;
-     content: "";
-     margin-top: 23px;
-   }
-   */
 }
 .author’s_book .container .art_books {
   display: flex;
