--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,7 @@ header .container .button_order {
 }
 .banner .container .books {
   max-width: 589px;
-  margin-right: 75px;
-  margin-left: 23px;
+  text-align: left;
   display: block;
 }
 .banner .container .books .welcome {
@@ -189,7 +188,7 @@ header .container .button_order {
   margin-right: 10px;
   margin-top: 5px;
 }
-.banner .container .img {
+.banner .container .img_main {
   max-width: 592px;
   height: 800px;
   margin-right: 21px;
