--- a/css/style.scss
+++ b/css/style.scss
@@ -101,8 +101,7 @@ header {
 
     .books {
       max-width: 589px;
-      margin-right: 75px;
-      margin-left: 23px;
+      text-align: left;
       display: block;
 
       .welcome {
@@ -211,7 +210,7 @@ header {
       }
     }
 
-    .img {
+    .img_main {
       max-width: 592px;
       height: 800px;
       margin-right: 21px;
